# cardtorio

./: Cargo.toml
.github/workflows/: ci.yaml
src/: camera.rs  card.rs  main.rs
